--- a/login.html
+++ b/login.html
@@ -104,7 +104,7 @@ async function login(){
     return;
   }
 
-  const { data, error } = await supabase
+  const { data, error } = await sb
     .from("pos_users")
     .select("id,username,name,role")
     .eq("username", username)
@@ -128,4 +128,5 @@ async function login(){
 
 </body>
 </html>
+
 
