--- a/index.html
+++ b/index.html
@@ -5459,7 +5459,7 @@ Object.entries(appliedObj).forEach(([k, amt]) => {
     // ====== ONLINE ======
     const supabaseOK = await canReachSupabase();
     if(isOnline() && supabaseOK){
-      let q = supabase
+      let q = sb
         .from("pos_sales_orders")
         .select(
   "salesorder_no,transaction_date,customer_name,shipping_phone,grand_total,is_paid,payment_method,cashier_id,cashier_name",
@@ -5600,6 +5600,7 @@ Object.entries(appliedObj).forEach(([k, amt]) => {
 
 </body>
 </html>
+
 
 
 
